<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2019 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="okay">Okay</string>
    <string name="incorrect_qr_title">Incorrect QR Code</string>
    <string name="alert_error_title">Error</string>

    <!-- Strings in the main activity -->
    <string name="app_name">Draw Selector</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_location_title">Please Confirm Location</string>
    <string name="main_description">The user firsts needs to confirm they are in the correct room</string>
    <string name="confirm">Confirm</string>
    <string name="main_qr_code_value">Starting Location wH8f2Bz9pQ</string>
    <string name="main_correct_qr_title">Correct QR Code</string>
    <string name="main_correct_qr_description">Press Okay to Progress to Next Stage</string>
    <string name="main_incorrect_qr_description">Please Scan the Correct Starting Code</string>

    <!-- Strings in the Resolve Dialog Box -->
    <string name="resolve_dialog_ok">Resolve</string>
    <string name="resolve_dialog_title">Resolve an Anchor</string>
    <string name="resolve_dialog_text_hint">Enter Room Code</string>

    <!-- Strings used in Snackbar messages -->
    <string name="snackbar_anchor_placed">Now hosting anchor…</string>
    <string name="snackbar_arcore_unavailable">Please install ARCore.</string>
    <string name="snackbar_arcore_too_old">Please update ARCore.</string>
    <string name="snackbar_arcore_sdk_too_old">Please update the app with a newer version of the ARCore SDK.</string>
    <string name="snackbar_arcore_exception">This device does not support ARCore.</string>
    <string name="snackbar_camera_unavailable">Camera unavailable. Try restarting the app.</string>
    <string name="snackbar_cloud_id_shared">The anchor ID was shared via Firebase.</string>
    <string name="snackbar_firebase_error">There was a Firebase Error. Please check Logcat for more details.</string>
    <string name="snackbar_host_error">Hosting Error: %1$s</string>
    <string name="snackbar_initial_message">Please select Host or Resolve to continue.</string>
    <string name="snackbar_on_host">Now in Hosting Mode. Press Cancel to Exit.</string>
    <string name="snackbar_on_resolve">Now in Resolving Mode. Press Cancel to Exit.</string>
    <string name="snackbar_resolve_error">Resolving Error: %1$s</string>
    <string name="snackbar_resolve_success">The anchor was successfully resolved.</string>
    <string name="snackbar_room_code_available">The room code is now available. Please place an anchor to host.</string>
    <string name="snackbar_resolve_no_result_yet">Still resolving the anchor. Please make sure you\'re looking at where the Cloud Anchor was hosted. Or, try to re-join the room.</string>

    <string name="share_experience_title">Experience it together</string>
    <string name="share_experience_message">To power this session, Google will process visual data from your camera.</string>
    <string name="agree_to_share">Start now</string>
    <string name="learn_more">Learn more</string>
    <string name="learn_more_url">https://developers.google.com/ar/data-privacy</string>

    <!-- Resolve Lobby-->
    <string name="resolve_lobby_title">Search for Drawer</string>
    <string name="resolve_lobby_description">Select which anchor you would like to resolve</string>
    <string name="search">Search</string>
    <string name="resolve_correct_qr_title">Correct QR Code</string>
    <string name="resolve_correct_qr_description">Press Okay to Return</string>
    <string name="resolve_incorrect_qr_description">Please Try Locating the Draw Again</string>
    <string name="resolve_incorrect_password_description">Incorrect Password</string>
    <string name="resolve_check_connection_description">Please Check Connection</string>
    <string name="resolve_failed_loading_description">Failed Loading File</string>
    <string name="resolve_fail_anchor_description">Error resolving Anchor, Please try again</string>

    <!--Cloud Anchor Activity-->
    <string name="scan">Scan QR</string>
    <string name="initial_room_code">0000</string>

    <!--Settings-->
    <string name="settings_title">Settings</string>
    <string name="settings_change_pin_description">Change the Access Pin</string>
    <string name="settings_change_pin_button">Change Pin</string>
    <string name="settings_manage_drawers_description">Manage Drawer Database</string>
    <string name="settings_manage_drawers_button">Manage</string>
    <string name="settings_add_drawer_description">Add a New Drawer</string>
    <string name="settings_add_drawer_button">Add</string>
    <string name="settings_enter_pin">Enter Pin…</string>
    <string name="settings_enter_name">Enter Name…</string>
    <string name="settings_delete_all">Delete All</string>
    <string name="settings_host_instruction_description">Scan your space to create a new cloud anchor accessible by others</string>
    <string name="settings_changed_password_title">Password Changed</string>
    <string name="settings_changed_password_description">Successfully Changed the Password</string>
    <string name="settings_password_issue_title">Password Issue</string>
    <string name="settings_password_issue_description">Please Try Again</string>
    <string name="settings_empty_name_title">Empty Name</string>
    <string name="settings_empty_name_description">Please Enter a Name for the Anchor</string>
    <string name="settings_failure_deleting_description">Failure Deleting Anchor</string>
    <string name="settings_failure_fetching_description">Failure Fetching List</string>
    <string name="settings_failure_deleting_all_description">Failure Deleting All</string>
    <string name="success">Success</string>
    <string name="settings_all_deleted_description">All Anchors Deleted</string>


    <!--Alert Dialogue-->
    <string name="alert_no_anchor_description">No Anchor Description</string>

    <!--Password Alert Dialogue-->
    <string name="password_alert_title">Enter Password:</string>
    <string name="password_alert_hint">Password…</string>
    <string name="password_alert_one_button">1</string>
    <string name="password_alert_two_button">2</string>
    <string name="password_alert_three_button">3</string>
    <string name="password_alert_four_button">4</string>
    <string name="password_alert_five_button">5</string>
    <string name="password_alert_six_button">6</string>
    <string name="password_alert_seven_button">7</string>
    <string name="password_alert_eight_button">8</string>
    <string name="password_alert_nine_button">9</string>
    <string name="password_alert_zero_button">0</string>
    <string name="password_alert_back_button">X</string>
    <string name="password_alert_enter_button">></string>

</resources>