<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingsTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:text="@string/settings_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingsReturnIB"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/settingsChangePinTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/settings_change_pin_description"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitleTV"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <Button
        android:id="@+id/settingsChangePinB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_change_pin_button"
        android:theme="@style/AppButtonTheme"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsChangePinTV" />


    <TextView
        android:id="@+id/settingsManageDrawersTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/settings_manage_drawers_description"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsAddDrawB" />

    <Button
        android:id="@+id/settingsManageDrawersB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_manage_drawers_button"
        android:theme="@style/AppButtonTheme"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsManageDrawersTV" />

    <TextView
        android:id="@+id/settingsAddDrawTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/settings_add_drawer_description"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitleTV" />

    <Button
        android:id="@+id/settingsAddDrawB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_add_drawer_button"
        android:theme="@style/AppButtonTheme"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsAddDrawTV" />

    <EditText
        android:id="@+id/settingsEnterPin1ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/settings_enter_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsChangePinB" />

    <EditText
        android:id="@+id/settingsEnterPin2ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/settings_enter_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsEnterPin1ET" />

    <EditText
        android:id="@+id/settingsEnterNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/settings_enter_name"
        android:inputType="text"
        android:maxLength="25"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitleTV" />

    <Spinner
        android:id="@+id/settings_anchors_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="340dp"
        android:layout_height="107dp"
        android:backgroundTint="@color/white"
        android:spinnerMode="dialog"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitleTV" />

    <Button
        android:id="@+id/settingsClearAllB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_delete_all"
        android:theme="@style/AppButtonTheme"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_anchors_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>