<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.ar.core.examples.java.persistentcloudanchor.SelectActivity">

    <ImageButton
        android:id="@+id/resolveLobbyReturnIB"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/resolveLobbyTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="70dp"
        android:text="@string/resolve_lobby_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resolveLobbyDescriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/resolve_lobby_description"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolveLobbyAnchorsS" />

    <Button
        android:id="@+id/resolveLobbyViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:theme="@style/AppButtonTheme"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolveLobbyDescriptionTV" />

    <Spinner
        android:id="@+id/resolveLobbyAnchorsS"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="340dp"
        android:layout_height="107dp"
        android:backgroundTint="@color/white"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolveLobbyTitleTV" />


</androidx.constraintlayout.widget.ConstraintLayout>