<!--
   Copyright 2019 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.ar.core.examples.java.cloudanchor.CloudAnchorActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="328dp"
      android:layout_height="320dp"
      android:layout_alignParentStart="true"
      android:visibility="gone"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="34dp"
      android:layout_marginTop="2dp"
      android:layout_marginEnd="31dp"
      tools:srcCompat="@tools:sample/avatars" />

  <android.opengl.GLSurfaceView
      android:id="@+id/surfaceview"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:visibility="visible"
      android:layout_gravity="top"/>

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="visible"
      android:orientation="horizontal">

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/scan_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingEnd="10dp">

      <TextView
          android:id="@+id/room_code_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:background="#001337"
          android:fontFamily="monospace"
          android:gravity="center_vertical"
          android:paddingHorizontal="15dp"
          android:paddingVertical="5dp"
          android:text="@string/initial_room_code"
          android:textSize="20sp"
          android:textStyle="bold" />

    </RelativeLayout>
  </LinearLayout>


</RelativeLayout>
